--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,10 @@
 .done{
     text-decoration: line-through;
 }
+.th{
+    text-align: right;
+    border-spacing: 600px;
+}
 body{
-    background: bisque;
-}
-table {
-    border-collapse: collapse;
-}
-h1 {
-    /*background: mediumpurple;*/
-    padding-top: 150px;
-    text-align: center;
-    width: 60%;
-    font-size: 60px;
-    margin: -75px auto;
+    background-color: #d3cdb1;
 }
