--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,6 @@
     text-align: right;
     border-spacing: 600px;
 }
-body{
-    background-color: #d3cdb1;
+.body{
+    background-color: skyblue;
 }
